2008-11-17  Roger While <simrw@sim-basis.de>

	* configure.ac : Correct sed usage

2008-11-15  Roger While <simrw@sim-basis.de>

	* configure.ac : Remove lfs64 option, reinstate --enable-debug

2008-11-01  Roger While <simrw@sim-basis.de>

	* configure.ac : nanosleep on Solaris needs extra libs

2008-09-29  Roger While <simrw@sim-basis.de>

	* Makefile.am : Revise format of tarstamp.h

2008-08-20  Roger While <simrw@sim-basis.de>

	* configure.ac : Option changes for AIX

2008-08-16  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix AIX xlc

2008-08-08  Roger While <simrw@sim-basis.de>

	* configure.ac : Take out --enable-debug
	* Makefile.am : Force permissions when making dist

2008-07-05  Roger While <simrw@sim-basis.de>

	* configure.ac : No need to check for regex or mvgetnstr

2008-04-16  Roger While <simrw@sim-basis.de>

	* configure.ac : Add in "copy" directory for OC supplied COPY elements

2008-01-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix invalid usage of square brackets

2007-12-29  Roger While <simrw@sim-basis.de>

	* Bump version to 1.1

2007-12-27  Roger While <simrw@sim-basis.de>

	* Release 1.0

2007-12-21  Roger While <simrw@sim-basis.de>

	* configure.ac : Change order of checking various things

2007-12-18  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix WITH_VARSEQ setting

2007-12-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Add checks for headers/libraries when using
			 CISAM/DISAM/VBISAM

2007-11-21  Roger While <simrw@sim-basis.de>

	* configure.ac : Add --with-cisam, --with-disam, --with-vbisam

2007-11-09  Roger While <simrw@sim-basis.de>

	* configure.ac : Check for sizeof long int == long long

2007-10-23  Roger While <simrw@sim-basis.de>

	* configure.ac : Check for __attribute__((aligned))

2007-10-14  Roger While <simrw@sim-basis.de>

	* libcob.h : Add gmp include for C++

2007-10-10  Roger While <simrw@sim-basis.de>

	* General : bootstrap up to libtool 1.5.24