@@ -1,6 +1,6 @@
 # Signature of the current package.
-m4_define([AT_PACKAGE_NAME],	  [OpenCOBOL])
-m4_define([AT_PACKAGE_TARNAME],	  [open-cobol])
+m4_define([AT_PACKAGE_NAME],	  [OpenCOBOL CE])
+m4_define([AT_PACKAGE_TARNAME],	  [open-cobol-ce])
 m4_define([AT_PACKAGE_VERSION],	  [1.1])
-m4_define([AT_PACKAGE_STRING],	  [OpenCOBOL 1.1])
+m4_define([AT_PACKAGE_STRING],	  [OpenCOBOL CE 1.1])
 m4_define([AT_PACKAGE_BUGREPORT], [open-cobol-list@lists.sourceforge.net])
